2013-01-10  Tim 'mithro' Ansell  <mithro@mithis.com>

        Converting to unittest2 so we can use assertItemsEqual, making tests
        not dependent on order of items.
        https://bugs.webkit.org/show_bug.cgi?id=106532

        Before:
        Ran 1733 tests in 38.385s
        FAILED (failures=1, errors=22)

        After:
        Ran 1733 tests in 32.298s
        FAILED (failures=0, errors=22)

        Reviewed by Eric Seidel.

        * Scripts/webkitpy/common/checkout/scm/scm_unittest.py:
        * Scripts/webkitpy/thirdparty/__init__.py:
        (AutoinstallImportHook._install_unittest2):

2013-01-10  Christophe Dumez  <christophe.dumez@intel.com>

        [EFL] Add gstreamer 1.0.5 to jhbuild
        https://bugs.webkit.org/show_bug.cgi?id=106178

        Reviewed by Laszlo Gombos.

        Add gstreamer 1.0.5 to EFL's jhbuild configuration.

        * efl/jhbuild.modules:

2013-01-09  Alan Cutter  <alancutter@chromium.org>

        Updated parameters in GCE build scripts so they now work.
        https://bugs.webkit.org/show_bug.cgi?id=106523

        Reviewed by Adam Barth.

        * EWSTools/GoogleComputeEngine/build-chromium-ews.sh:
        * EWSTools/GoogleComputeEngine/build-commit-queue.sh:
        * EWSTools/cold-boot.sh:

2013-01-09  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Remove some stray references to WebKitPlatformSupport.h in DumpRenderTree
        https://bugs.webkit.org/show_bug.cgi?id=106520

        Reviewed by James Robinson.

        Part of a larger refactoring series. See tracking bug 82948.

        * DumpRenderTree/chromium/WebThemeEngineDRTMac.h:
        * DumpRenderTree/chromium/WebThemeEngineDRTMac.mm:

2013-01-09  Julie Parent  <jparent@chromium.org>

        Dashboard cleanup: Remove code for currentState and window.location.hash getting out of state
        https://bugs.webkit.org/show_bug.cgi?id=106514

        This is old code, as these can no longer get out of sync.